test/test_examples/syntactic_examples/syntax_error/error_prologue_05.zig
// Syntax error: missing "const" token

ifj = @import("ifj24.zig"); 

pub fn main() void {

}  